--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <section id="problema" class="section fade-in">
             <h2>¿Sin efectivo? Conocemos esa frustración.</h2>
             <p class="section-subtitle">
-                Vives en el mundo digital, pero la economía informal no. El "Snoopy Cash Kit" está diseñado para 
-                consumidores como tú (> $10,000 MXN, godínez, estudiantes) que enfrentan el "no traigo cambio" 
-                en compras espontáneas.
-            </p>
+                 Vives en el mundo digital, pero la economía informal no. El "Snoopy Cash Kit" está diseñado para consumidores como tú.
+<br><br>
+En México, el **56% de la población económicamente activa** se mueve en el ecosistema informal, donde la única moneda es el efectivo. Esta fricción se agrava al considerar que los usuarios gastan en promedio **$34 MXN en comisiones por retiros** en cajeros no-propios, incentivando a evitar retiros pequeños y dejándote en el dilema del "no traigo cambio". Tu billetera digital es potente, pero inútil justo cuando más la necesitas.
+</p>
         </section>
 
         <section id="solucion" class="section fade-in">
@@ -109,7 +109,7 @@
         <section id="feedback" class="section feedback-section fade-in">
             <h2>Compártenos tu experiencia</h2>
             <p>Para construir la mejor solución, necesitamos tu opinión. ¿Vives esta problemática? ¿Qué te parece la idea?</p>
-            <a href="https://docs.google.com/forms/d/TU_ENLACE_DE_GOOGLE_FORM" target="_blank" class="feedback-button">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeheglmGau1r3R9mvanUxTKHFDHMmXWkiccBMTMFkzQkE8c3Q/viewform?usp=dialog" target="_blank" class="feedback-button">
                 ¡Quiero opinar y unirme a la lista!
             </a>
         </section>
